[gd_scene load_steps=13 format=3 uid="uid://d2rbg8iloa6i3"]

[ext_resource type="Script" uid="uid://c0migm5kephwt" path="res://overworld/characters/player/player.gd" id="1_bro7v"]
[ext_resource type="PackedScene" uid="uid://ky44kryevhyb" path="res://assets/allinone.fbx" id="2_62jwq"]
[ext_resource type="PackedScene" uid="uid://bs2c6tt82isko" path="res://overworld/characters/state_machine.tscn" id="3_hi0qa"]
[ext_resource type="Script" uid="uid://cjimadhpsbkwr" path="res://overworld/characters/player/states/idle.gd" id="4_hi0qa"]
[ext_resource type="Script" uid="uid://jjfivdcjnvkf" path="res://overworld/characters/player/states/walk.gd" id="5_463gr"]
[ext_resource type="Script" uid="uid://0q801d0v5c3i" path="res://overworld/characters/player/states/attack.gd" id="6_xup06"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_oby1d"]

[sub_resource type="SphereShape3D" id="SphereShape3D_bro7v"]
radius = 0.417952

[sub_resource type="CapsuleMesh" id="CapsuleMesh_bro7v"]

[sub_resource type="Animation" id="Animation_oby1d"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_bro7v"]
resource_name = "attack"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.633333, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 1, 0), Vector3(0, 1, -0.477367), Vector3(0, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.433333, 0.633333, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.660834, 0, 0), Vector3(-0.697957, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_62jwq"]
_data = {
&"RESET": SubResource("Animation_oby1d"),
&"attack": SubResource("Animation_bro7v")
}

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_bro7v")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_oby1d")

[node name="Visuals" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="allinone" parent="Visuals" instance=ExtResource("2_62jwq")]
transform = Transform3D(-1, 0, -1.19209e-07, 0, 1, 0, 1.19209e-07, 0, -1, 0, -1.29534, 0)

[node name="Skeleton3D" parent="Visuals/allinone/root_armature_character" index="0"]
bones/0/position = Vector3(0.000253927, 0.000402865, 0.00639264)
bones/0/rotation = Quaternion(0.767593, 0.018411, 0.133055, 0.626705)
bones/1/position = Vector3(0, 0.0013642, 7.42029e-11)
bones/1/rotation = Quaternion(-0.0556396, -0.00170205, -0.0295031, 0.998013)
bones/1/scale = Vector3(1, 1, 1)
bones/2/position = Vector3(1.00891e-10, 0.00141575, -6.05151e-11)
bones/2/rotation = Quaternion(-0.0691526, 0.0270543, -0.0604689, 0.995404)
bones/2/scale = Vector3(1, 1, 1)
bones/3/position = Vector3(-1.45519e-12, 0.00123296, -2.68619e-11)
bones/3/rotation = Quaternion(-0.0130856, 0.120006, -0.0276697, 0.992301)
bones/3/scale = Vector3(1, 1, 1)
bones/4/position = Vector3(1.43193e-23, 0.00137338, -7.54027e-11)
bones/4/rotation = Quaternion(0.214314, -0.0740947, 0.0441433, 0.97295)
bones/4/scale = Vector3(1, 1, 1)
bones/5/position = Vector3(2.31011e-11, 0.000471845, 7.56882e-11)
bones/5/rotation = Quaternion(-0.0947615, 0.0285907, -0.00272604, 0.995086)
bones/5/scale = Vector3(1, 1, 1)
bones/6/position = Vector3(8.73115e-12, 0.00044716, -3.56523e-12)
bones/6/rotation = Quaternion(-0.0827737, -0.0485866, 0.0309942, 0.994901)
bones/6/scale = Vector3(1, 1, 1)
bones/7/position = Vector3(-8.25033e-23, 7.6294e-10, 2.6226e-10)
bones/7/rotation = Quaternion(-3.72529e-09, 8.67362e-21, 4.23516e-22, 1)
bones/7/scale = Vector3(1, 1, 1)
bones/8/position = Vector3(-0.00185269, 0.00364945, 0.00201576)
bones/8/rotation = Quaternion(0.630721, -0.471959, -0.4934, 0.368785)
bones/8/scale = Vector3(1, 1, 1)
bones/9/position = Vector3(0.00185269, 0.00364945, 0.00201576)
bones/9/rotation = Quaternion(0.630721, 0.471959, 0.4934, 0.368785)
bones/9/scale = Vector3(1, 1, 1)
bones/10/position = Vector3(-9.39983e-16, 0.000818191, 0.00295643)
bones/10/rotation = Quaternion(0.5, -0.5, -0.5, 0.5)
bones/10/scale = Vector3(1, 1, 1)
bones/11/position = Vector3(-9.39983e-16, 0.000424168, 0.00295643)
bones/11/rotation = Quaternion(0.5, -0.5, -0.5, 0.5)
bones/11/scale = Vector3(1, 1, 1)
bones/12/position = Vector3(0.000130508, 0.000876492, 0.000555134)
bones/12/rotation = Quaternion(-0.605155, -0.345863, -0.356134, 0.622363)
bones/12/scale = Vector3(1, 1, 1)
bones/13/rotation = Quaternion(-0.190282, 0.48472, -0.545419, 0.656778)
bones/13/scale = Vector3(1, 1, 1)
bones/14/position = Vector3(-3.25963e-10, 0.00121589, 3.72529e-11)
bones/14/rotation = Quaternion(6.40581e-08, 0.127649, -9.36738e-08, 0.991819)
bones/14/scale = Vector3(1, 1, 1)
bones/15/position = Vector3(5.58794e-11, 0.00121589, 4.09782e-10)
bones/15/rotation = Quaternion(0.313981, 0.127649, -0.38727, 0.857405)
bones/15/scale = Vector3(1, 1, 1)
bones/16/rotation = Quaternion(-6.79865e-08, 6.23986e-08, -6.65895e-08, 1)
bones/16/scale = Vector3(1, 1, 1)
bones/17/rotation = Quaternion(0.0134989, -0.000672306, 0.0496796, 0.998674)
bones/17/scale = Vector3(1, 1, 1)
bones/18/position = Vector3(9.57709e-05, 0.000297231, 0.000196141)
bones/18/rotation = Quaternion(0.0166276, 0.847374, -0.0356593, 0.529537)
bones/18/scale = Vector3(1, 1, 1)
bones/19/position = Vector3(7.91761e-10, 0.000550818, -9.08995e-10)
bones/19/rotation = Quaternion(0.097772, 0.124671, -0.013563, 0.987276)
bones/19/scale = Vector3(1, 1, 1)
bones/20/position = Vector3(-3.48557e-10, 0.000329948, 1.61183e-09)
bones/20/rotation = Quaternion(0.025515, 0.000104317, -0.00409681, 0.999666)
bones/20/scale = Vector3(1, 1, 1)
bones/21/position = Vector3(1.09286e-10, 0.000243708, -1.05012e-09)
bones/21/rotation = Quaternion(0.0608624, -7.92061e-05, 0.009478, 0.998101)
bones/21/scale = Vector3(1, 1, 1)
bones/22/position = Vector3(-4.59779e-05, 6.42817e-06, 4.4846e-05)
bones/22/rotation = Quaternion(0.0220933, 0.117712, 0.30947, 0.943337)
bones/22/scale = Vector3(1, 1, 1)
bones/23/position = Vector3(7.6033e-11, 0.000323073, 1.50136e-09)
bones/23/rotation = Quaternion(0.156283, -0.00358376, 0.0226385, 0.987446)
bones/23/scale = Vector3(1, 1, 1)
bones/24/position = Vector3(-1.0245e-09, 0.00021826, -5.23485e-11)
bones/24/rotation = Quaternion(0.0510814, 0.000384663, -0.0532738, 0.997272)
bones/24/scale = Vector3(1, 1, 1)
bones/25/position = Vector3(1.25467e-05, 0.000320077, 5.85599e-05)
bones/25/rotation = Quaternion(-0.0146592, 0.863961, -0.0159479, 0.503093)
bones/25/scale = Vector3(1, 1, 1)
bones/26/position = Vector3(9.68507e-10, 0.000564846, 8.22851e-10)
bones/26/rotation = Quaternion(0.152108, -0.0341106, 0.00284407, 0.987771)
bones/26/scale = Vector3(1, 1, 1)
bones/27/position = Vector3(-1.98328e-11, 0.000353208, -5.12092e-10)
bones/27/rotation = Quaternion(0.00136086, 4.84966e-06, 0.000867906, 0.999999)
bones/27/scale = Vector3(1, 1, 1)
bones/28/position = Vector3(-1.40269e-11, 0.000290822, -1.26124e-09)
bones/28/rotation = Quaternion(0.0965153, 6.11651e-05, -0.00242062, 0.995329)
bones/28/scale = Vector3(1, 1, 1)
bones/29/position = Vector3(-6.28549e-05, 0.000299707, -9.92968e-05)
bones/29/rotation = Quaternion(0.00289519, 0.840346, -0.0639562, 0.538257)
bones/29/scale = Vector3(1, 1, 1)
bones/30/position = Vector3(8.39963e-10, 0.00057781, -1.10148e-10)
bones/30/rotation = Quaternion(0.0964718, 0.040831, 0.0478118, 0.993348)
bones/30/scale = Vector3(1, 1, 1)
bones/31/position = Vector3(-1.06867e-10, 0.000268878, 6.70284e-10)
bones/31/rotation = Quaternion(0.0118769, 2.37144e-05, -0.00204208, 0.999927)
bones/31/scale = Vector3(1, 1, 1)
bones/32/position = Vector3(2.14674e-11, 0.000258986, 3.85123e-11)
bones/32/rotation = Quaternion(0.0766381, -4.2271e-05, 0.00461591, 0.997048)
bones/32/scale = Vector3(1, 1, 1)
bones/33/position = Vector3(-0.000100809, 0.000258288, -0.000203911)
bones/33/rotation = Quaternion(-0.0146097, 0.836273, -0.124097, 0.533886)
bones/33/scale = Vector3(1, 1, 1)
bones/34/position = Vector3(8.66593e-10, 0.000593398, 8.42025e-10)
bones/34/rotation = Quaternion(0.0320433, -0.109112, 0.0747, 0.990701)
bones/34/scale = Vector3(1, 1, 1)
bones/35/position = Vector3(-8.87118e-11, 0.000249002, 1.84125e-10)
bones/35/rotation = Quaternion(0.0881848, -0.000706505, 0.0079807, 0.996072)
bones/35/scale = Vector3(1, 1, 1)
bones/36/position = Vector3(-4.02432e-10, 0.000195301, -6.50322e-10)
bones/36/rotation = Quaternion(0.0423396, 7.4884e-05, -0.0177715, 0.998945)
bones/36/scale = Vector3(1, 1, 1)
bones/37/position = Vector3(-0.000130508, 0.000876492, 0.000555134)
bones/37/rotation = Quaternion(-0.605155, 0.345863, 0.356134, 0.622363)
bones/37/scale = Vector3(1, 1, 1)
bones/38/rotation = Quaternion(-0.434392, -0.554994, 0.400255, 0.585731)
bones/38/scale = Vector3(1, 1, 1)
bones/39/rotation = Quaternion(-1.87982e-08, -0.0927346, 2.19208e-07, 0.995691)
bones/39/scale = Vector3(1, 1, 1)
bones/40/position = Vector3(2.23517e-10, 0.00121589, 5.21541e-10)
bones/40/rotation = Quaternion(0.0851542, -0.0927345, 0.148454, 0.980872)
bones/40/scale = Vector3(1, 1, 1)
bones/41/rotation = Quaternion(-1.15484e-07, 5.44824e-08, 5.96047e-08, 1)
bones/41/scale = Vector3(1, 1, 1)
bones/42/position = Vector3(-1.49012e-10, 0.00116534, 3.72529e-11)
bones/42/scale = Vector3(1, 1, 1)
bones/43/position = Vector3(-9.57709e-05, 0.000297231, 0.000196141)
bones/43/rotation = Quaternion(0.0166276, -0.847374, 0.0356593, 0.529537)
bones/43/scale = Vector3(1, 1, 1)
bones/44/position = Vector3(-7.91761e-10, 0.000550818, -9.08995e-10)
bones/44/rotation = Quaternion(0.097772, -0.124671, 0.013563, 0.987276)
bones/44/scale = Vector3(1, 1, 1)
bones/45/position = Vector3(3.48557e-10, 0.000329948, 1.61183e-09)
bones/45/rotation = Quaternion(0.025515, -0.000104231, 0.00409681, 0.999666)
bones/45/scale = Vector3(1, 1, 1)
bones/46/position = Vector3(8.70828e-11, 0.000243708, -1.09962e-09)
bones/46/rotation = Quaternion(0.0608624, 7.91242e-05, -0.00947801, 0.998101)
bones/46/scale = Vector3(1, 1, 1)
bones/47/position = Vector3(4.59779e-05, 6.42817e-06, 4.4846e-05)
bones/47/rotation = Quaternion(0.0220933, -0.117712, -0.30947, 0.943337)
bones/47/scale = Vector3(1, 1, 1)
bones/48/position = Vector3(-7.6033e-11, 0.000323073, 1.50136e-09)
bones/48/rotation = Quaternion(0.156283, 0.00358376, -0.0226385, 0.987446)
bones/48/scale = Vector3(1, 1, 1)
bones/49/position = Vector3(1.0245e-09, 0.00021826, -5.23485e-11)
bones/49/rotation = Quaternion(0.0510814, -0.000384663, 0.0532738, 0.997272)
bones/49/scale = Vector3(1, 1, 1)
bones/50/position = Vector3(-1.25467e-05, 0.000320077, 5.85599e-05)
bones/50/rotation = Quaternion(-0.0146592, -0.863961, 0.0159479, 0.503093)
bones/50/scale = Vector3(1, 1, 1)
bones/51/position = Vector3(-9.68507e-10, 0.000564846, 8.22851e-10)
bones/51/rotation = Quaternion(0.152108, 0.0341106, -0.00284407, 0.987771)
bones/51/scale = Vector3(1, 1, 1)
bones/52/position = Vector3(1.98328e-11, 0.000353208, -5.12092e-10)
bones/52/rotation = Quaternion(0.00136086, -4.84966e-06, -0.000867906, 0.999999)
bones/52/scale = Vector3(1, 1, 1)
bones/53/position = Vector3(1.40269e-11, 0.000290822, -1.26124e-09)
bones/53/rotation = Quaternion(0.0965153, -6.10539e-05, 0.00242063, 0.995329)
bones/53/scale = Vector3(1, 1, 1)
bones/54/position = Vector3(6.28549e-05, 0.000299707, -9.92968e-05)
bones/54/rotation = Quaternion(0.00289519, -0.840346, 0.0639562, 0.538257)
bones/54/scale = Vector3(1, 1, 1)
bones/55/position = Vector3(-8.39963e-10, 0.00057781, -1.10148e-10)
bones/55/rotation = Quaternion(0.0964718, -0.0408308, -0.0478117, 0.993348)
bones/55/scale = Vector3(1, 1, 1)
bones/56/position = Vector3(7.72932e-12, 0.000268879, 1.8468e-09)
bones/56/rotation = Quaternion(0.011877, -2.38329e-05, 0.00204208, 0.999927)
bones/56/scale = Vector3(1, 1, 1)
bones/57/position = Vector3(2.73384e-11, 0.000258985, -1.11178e-09)
bones/57/rotation = Quaternion(0.0766381, 4.21661e-05, -0.00461592, 0.997048)
bones/57/scale = Vector3(1, 1, 1)
bones/58/position = Vector3(0.000100809, 0.000258288, -0.000203911)
bones/58/rotation = Quaternion(-0.0146097, -0.836273, 0.124097, 0.533886)
bones/58/scale = Vector3(1, 1, 1)
bones/59/position = Vector3(-8.66593e-10, 0.000593398, 8.42025e-10)
bones/59/rotation = Quaternion(0.0320433, 0.109112, -0.0747, 0.990701)
bones/59/scale = Vector3(1, 1, 1)
bones/60/position = Vector3(8.87118e-11, 0.000249002, 1.84125e-10)
bones/60/rotation = Quaternion(0.0881848, 0.000706425, -0.0079807, 0.996072)
bones/60/scale = Vector3(1, 1, 1)
bones/61/position = Vector3(2.67466e-10, 0.000195303, -2.37419e-09)
bones/61/rotation = Quaternion(0.0423396, -7.49255e-05, 0.0177715, 0.998945)
bones/61/scale = Vector3(1, 1, 1)
bones/62/position = Vector3(0.00100028, -0.000215783, -0.000310094)
bones/62/rotation = Quaternion(5.4142e-08, 0.696936, 0.717133, 5.26172e-08)
bones/62/scale = Vector3(1, 1, 1)
bones/63/position = Vector3(-0.00100028, -0.000215783, -0.000310094)
bones/63/rotation = Quaternion(-5.4142e-08, 0.696936, 0.717133, -5.26172e-08)
bones/63/scale = Vector3(1, 1, 1)
bones/64/position = Vector3(0, 3.78895e-11, 1.86934e-10)
bones/64/rotation = Quaternion(0.284216, 0.699962, 0.432896, -0.491808)
bones/64/scale = Vector3(1, 1, 1)
bones/65/position = Vector3(0, 3.78895e-11, 1.86934e-10)
bones/65/rotation = Quaternion(-0.284216, 0.699962, 0.432896, 0.491808)
bones/65/scale = Vector3(1, 1, 1)
bones/66/position = Vector3(0.00139804, 0.000403629, 0.000229626)
bones/66/rotation = Quaternion(0.98365, -0.106534, 0.108675, 0.0963008)
bones/66/scale = Vector3(1, 1, 0.999996)
bones/67/position = Vector3(1.25729e-10, 0.00164023, -9.31323e-11)
bones/67/rotation = Quaternion(2.04884e-08, -0.00115504, 9.13862e-10, 0.999999)
bones/67/scale = Vector3(1, 1, 1)
bones/68/position = Vector3(-6.51926e-11, 0.00164023, -1.11759e-10)
bones/68/rotation = Quaternion(0.00193255, -0.00115504, 2.1772e-06, 0.999997)
bones/68/scale = Vector3(1, 1, 1)
bones/69/position = Vector3(-4.65661e-11, 0.00158723, 1.86265e-11)
bones/69/rotation = Quaternion(3.88611e-09, -0.0614941, 3.45256e-08, 0.998108)
bones/69/scale = Vector3(1, 1, 1)
bones/70/position = Vector3(-6.51926e-11, 0.00158722, -4.65661e-11)
bones/70/rotation = Quaternion(-0.501993, -0.135519, -0.106094, 0.847574)
bones/70/scale = Vector3(1, 1, 1)
bones/71/position = Vector3(-7.54626e-12, 0.000791576, -1.97736e-10)
bones/71/rotation = Quaternion(0.0118384, 0.966126, -0.257777, 0.00326265)
bones/71/scale = Vector3(1, 1, 1)
bones/72/position = Vector3(-0.00139804, 0.000403629, 0.000229626)
bones/72/rotation = Quaternion(0.978212, -0.123733, -0.0840846, 0.143947)
bones/72/scale = Vector3(1, 1, 0.999996)
bones/73/position = Vector3(9.31323e-11, 0.00156474, 3.44589e-10)
bones/73/rotation = Quaternion(-8.9144e-08, 0.111873, 1.25785e-08, 0.993723)
bones/73/scale = Vector3(1, 1, 1)
bones/74/position = Vector3(-5.12227e-11, 0.00156474, 3.72529e-11)
bones/74/rotation = Quaternion(0.238903, 0.111873, -0.0277201, 0.964179)
bones/74/scale = Vector3(1, 1, 1)
bones/75/position = Vector3(-1.76951e-10, 0.00151167, 1.58325e-10)
bones/75/rotation = Quaternion(5.3983e-08, 0.030411, -4.48423e-08, 0.999537)
bones/75/scale = Vector3(1, 1, 1)
bones/76/position = Vector3(-2.79397e-11, 0.00151167, -8.3819e-11)
bones/76/rotation = Quaternion(-0.640803, 0.100949, 0.0244725, 0.760646)
bones/76/scale = Vector3(1, 1, 1)
bones/77/position = Vector3(4.32121e-11, 0.000791577, -1.88991e-10)
bones/77/rotation = Quaternion(-0.0119309, 0.966416, -0.256687, -0.00297232)
bones/77/scale = Vector3(1, 1, 1)

[node name="amorarm" parent="Visuals/allinone/root_armature_character/Skeleton3D" index="0"]
visible = false

[node name="amorplastron" parent="Visuals/allinone/root_armature_character/Skeleton3D" index="1"]
visible = false

[node name="armorceinturethighs" parent="Visuals/allinone/root_armature_character/Skeleton3D" index="2"]
visible = false

[node name="armorhelmet" parent="Visuals/allinone/root_armature_character/Skeleton3D" index="3"]
visible = false

[node name="armorknees" parent="Visuals/allinone/root_armature_character/Skeleton3D" index="4"]
visible = false

[node name="armorlegs" parent="Visuals/allinone/root_armature_character/Skeleton3D" index="5"]
visible = false

[node name="armorshoe" parent="Visuals/allinone/root_armature_character/Skeleton3D" index="6"]
visible = false

[node name="armorskirt" parent="Visuals/allinone/root_armature_character/Skeleton3D" index="7"]
visible = false

[node name="armorthigh" parent="Visuals/allinone/root_armature_character/Skeleton3D" index="8"]
visible = false

[node name="bag" parent="Visuals/allinone/root_armature_character/Skeleton3D" index="9"]
visible = false

[node name="bottes" parent="Visuals/allinone/root_armature_character/Skeleton3D" index="10"]
visible = false

[node name="bottesgreen" parent="Visuals/allinone/root_armature_character/Skeleton3D" index="11"]
visible = false

[node name="ceinture" parent="Visuals/allinone/root_armature_character/Skeleton3D" index="12"]
visible = false

[node name="greenoutfit" parent="Visuals/allinone/root_armature_character/Skeleton3D" index="17"]
visible = false

[node name="greenoutfitbelt" parent="Visuals/allinone/root_armature_character/Skeleton3D" index="18"]
visible = false

[node name="greenoutfitneckless" parent="Visuals/allinone/root_armature_character/Skeleton3D" index="19"]
visible = false

[node name="hairT" parent="Visuals/allinone/root_armature_character/Skeleton3D" index="20"]
visible = false

[node name="hairone" parent="Visuals/allinone/root_armature_character/Skeleton3D" index="21"]
visible = false

[node name="hairtail" parent="Visuals/allinone/root_armature_character/Skeleton3D" index="22"]
visible = false

[node name="hairtailknight" parent="Visuals/allinone/root_armature_character/Skeleton3D" index="23"]
visible = false

[node name="hairvariant_001" parent="Visuals/allinone/root_armature_character/Skeleton3D" index="25"]
visible = false

[node name="hat" parent="Visuals/allinone/root_armature_character/Skeleton3D" index="26"]
visible = false

[node name="ninjassuit" parent="Visuals/allinone/root_armature_character/Skeleton3D" index="27"]
visible = false

[node name="ninjassuitshoe" parent="Visuals/allinone/root_armature_character/Skeleton3D" index="29"]
visible = false

[node name="ninjassuitthigh" parent="Visuals/allinone/root_armature_character/Skeleton3D" index="30"]
visible = false

[node name="ninjasuitshort" parent="Visuals/allinone/root_armature_character/Skeleton3D" index="31"]
visible = false

[node name="pants" parent="Visuals/allinone/root_armature_character/Skeleton3D" index="32"]
visible = false

[node name="BoneAttachment3D" type="BoneAttachment3D" parent="Visuals/allinone/root_armature_character/Skeleton3D" index="37"]
transform = Transform3D(0.95625, -0.0620282, 0.285897, 0.286217, -0.00385888, -0.958157, 0.0605358, 0.998067, 0.0140634, -3.76818e-06, 6.61694e-06, 0.0125948)
bone_name = "DEF-spine.006"
bone_idx = 6

[node name="Area3D" type="Area3D" parent="Visuals/allinone/root_armature_character/Skeleton3D/BoneAttachment3D"]
transform = Transform3D(-0.01, 0, 1.28966e-09, 1.15415e-09, -1.24783e-09, 0.01, -4.65661e-10, 0.01, 1.27693e-09, 0.000112983, 0.000647067, -9.93226e-06)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Visuals/allinone/root_armature_character/Skeleton3D/BoneAttachment3D/Area3D"]
shape = SubResource("SphereShape3D_bro7v")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Visuals"]
visible = false
mesh = SubResource("CapsuleMesh_bro7v")
skeleton = NodePath("../..")

[node name="camera_mount" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.55162, 0)

[node name="Camera3D" type="Camera3D" parent="camera_mount"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0.604978, 3)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_62jwq")
}

[node name="StateMachine" parent="." node_paths=PackedStringArray("starting_state") instance=ExtResource("3_hi0qa")]
starting_state = NodePath("idle")

[node name="idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("walk_state", "attack_state")]
script = ExtResource("4_hi0qa")
walk_state = NodePath("../walk")
attack_state = NodePath("../attack")
animation_name = "root_armature_character|anim_iddle"

[node name="walk" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state", "attack_state")]
script = ExtResource("5_463gr")
idle_state = NodePath("../idle")
attack_state = NodePath("../attack")
animation_name = "root_armature_character|anim_walk"

[node name="attack" type="Node" parent="StateMachine" node_paths=PackedStringArray("walk_state", "idle_state")]
script = ExtResource("6_xup06")
walk_state = NodePath("../walk")
idle_state = NodePath("../idle")
animation_name = "root_armature_character|anim_flip"

[connection signal="body_entered" from="Visuals/allinone/root_armature_character/Skeleton3D/BoneAttachment3D/Area3D" to="." method="_on_area_3d_body_entered"]

[editable path="Visuals/allinone"]
